Moved events to ./events/

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -7,8 +7,7 @@
   "changedLanguage": "Language changed!",
   "howtochangelang": "How can I change language?",
   "howtochangelang_solution": "You can change language with type ``<[0]>lang {language_code_here}``\nExample : ``<[0]>lang ko``",
-  "reboot": "Reboot",
-  "reboot_desc": "Rebooting...",
+
   "category": "Category",
   "category_general": "General",
   "category_moderation": "Moderation",
@@ -16,6 +15,9 @@
   "category_fun": "Fun",
   "category_info": "Information",
   "category_owners": "Owners Only",
+
+  "reboot": "Reboot",
+  "reboot_desc": "Rebooting...",
   "desc_none": "Description not provided.",
   "desc_ping": "Show bot's ping.",
   "desc_sayd": "Bot will repeat your message.",
@@ -52,6 +54,8 @@
   "cmd_support_desc": "Show bot's support server link.\nUsage:\n> ``<[0]>support``\nSame featured command:\n> ``<[0]>지원``",
   "cmd_ping": "🏓 Ping!",
   "cmd_ping_desc": "Show Bot's ping.\nUsage:\n> ``<[0]>ping``\nSame featured command:\n> ``<[0]>핑``, ``<[0]>퐁``, ``<[0]>pong``",
+  "cmd_status": "🎛️ Status",
+  "cmd_status_desc": "Show Bot's status.\nUsage:\n> ``<[0]>status``\nSame featured command:\n> ``<[0]>상태``",
   "cmd_help": "📖 Help / Manual",
   "cmd_help_desc": "Show Bot's help message. (Like this message that you are reading!)\nUsage:\n> ``<[0]>help (command)``\nSame featured command:\n> ``<[0]>도움``, ``<[0]>도움말``, ``<[0]>manual``",
   "cmd_lang": "🌐 Language",
@@ -59,9 +63,11 @@
   "cmd_reboot": "🔄 Reboot",
   "cmd_reboot_desc": "Reboot All shards of bot.\nUsage:\n> ``<[0]>reboot``\nSame featured command:\n> ``<[0]>재시동``, ``<[0]>재시작``, ``<[0]>restart``",
   "cmd_shell": "🛠️ Shell",
-  "cmd_shell_desc": "Run command to remote bot server.\nUsage:\n> ``<[0]>shell <code to compile>``\nSame featured command:\n> ``<[0]>command``, ``<[0]>code``",
+  "cmd_shell_desc": "Run command to remote bot server.\nUsage:\n> ``<[0]>shell <code to compile>``\nSame featured command:\n> ``<[0]>command``",
   "cmd_compile": "🛠️ Compile",
-  "cmd_compile_desc": "Run JS code to remote bot server.\nUsage:\n> ``<[0]>compile <command to run>``\nSame featured command:\n> ``<[0]>eval``",
+  "cmd_compile_desc": "Run SQL code to remote bot server.\nUsage:\n> ``<[0]>compile <command to run>``\nSame featured command:\n> ``<[0]>eval``, ``<[0]>code``",
+  "cmd_sql": "🛠️ SQL",
+  "cmd_sql_desc": "Run SQL code to remote bot server.\nUsage:\n> ``<[0]>sql <command to run>``\nSame featured command:\n> ``<[0]>db``",
   "cmd_notice": "📣 Notice",
   "cmd_notice_desc": "Send notice message to all server.\nUsage:\n> ``<[0]>notice <message>``\nSame featured command:\n> ``<[0]>공지``",
   "cmd_sayd": "🐦 Parrot message",
