--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -54,6 +54,8 @@
   "cmd_support_desc": "봇의 서포트 서버 링크를 보여줍니다.\n사용방법:\n> ``<[0]>support``\n같은 명령어:\n> ``<[0]>지원``",
   "cmd_ping": "🏓 핑!",
   "cmd_ping_desc": "봇의 핑을 보여줍니다.\n사용방법:\n> ``<[0]>ping``\n같은 명령어:\n> ``<[0]>핑``, ``<[0]>퐁``, ``<[0]>pong``",
+  "cmd_status": "🎛️ 상태",
+  "cmd_status_desc": "봇의 상태를 보여줍니다.\n사용방법:\n> ``<[0]>status``\n같은 명령어:\n> ``<[0]>상태``",
   "cmd_help": "📖 도움말 / 메뉴얼",
   "cmd_help_desc": "봇의 도움말을 보여줍니다.\n사용방법:\n> ``<[0]>help (명령어)``\n같은 명령어:\n> ``<[0]>도움``, ``<[0]>도움말``, ``<[0]>manual``",
   "cmd_lang": "🌐 언어",
@@ -63,7 +65,9 @@
   "cmd_shell": "🛠️ 쉘",
   "cmd_shell_desc": "봇 서버에 원격으로 쉘 명령을 요청합니다.\n사용방법:\n> ``<[0]>shell <실행할 명령어>``\n같은 명령어:\n> ``<[0]>command``",
   "cmd_compile": "🛠️ 컴파일",
-  "cmd_compile_desc": "봇 서버에 원격으로 JS 컴파일을 요청합니다.\n사용방법:\n> ``<[0]>compile <컴파일할 코드>``\n같은 명령어:\n> ``<[0]>eval``, ``<[0]>code``",
+  "cmd_compile_desc": "봇 서버에 원격으로 SQL 컴파일을 요청합니다.\n사용방법:\n> ``<[0]>sql <컴파일할 코드>``\n같은 명령어:\n> ``<[0]>eval``, ``<[0]>code``",
+  "cmd_sql": "🛠️ 컴파일",
+  "cmd_sql_desc": "봇 서버에 원격으로 SQL 컴파일을 요청합니다.\n사용방법:\n> ``<[0]>sql <컴파일할 코드>``\n같은 명령어:\n> ``<[0]>db``",
   "cmd_notice": "📣 공지",
   "cmd_notice_desc": "봇이 있는 모든 서버에 공지 메세지를 전송합니다.\n사용방법:\n> ``<[0]>notice <할 말>``\n같은 명령어:\n> ``<[0]>공지``",
   "cmd_sayd": "🐦 메세지 따라하기",
