Status Command - Complete
+ Added Status Command
+ Modified ping command for Sharding
+ Modified reboot command for Sharding
- Removed notice command

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -17,7 +17,7 @@
   "category_owners": "Owners Only",
 
   "reboot": "Reboot",
-  "reboot_desc": "Rebooting...",
+  "reboot_desc": "Sent reboot request to <[0]> shard(s).",
   "desc_none": "Description not provided.",
   "desc_ping": "Show bot's ping.",
   "desc_sayd": "Bot will repeat your message.",
@@ -48,6 +48,22 @@
   "compile_compiling": "Compiling Code...",
   "compile_err": "Error!",
 
+  "status_bot_id": "Bot ID",
+  "status_bot_ram_usage": "RAM Usage",
+  "status_bot_uptime": "Bot Uptime",
+  "status_bot_servers_of_this_shard": "Servers on this shard",
+  "status_bot_users_of_this_shard": "Users on this shard",
+  "status_bot_servers_of_all_shard": "Servers on all shard",
+  "status_bot_users_of_all_shard": "Users on all shard",
+  "status_bot_nodejs_ver": "Node.js Version",
+  "status_bot_discordjs_ver": "Discord.js Version",
+  "status_bot_os_info": "OS Info",
+
+  "day": " day",
+  "hour": " hour",
+  "minute": " minute",
+  "second": " second",
+
   "cmd_invite": "📧 Invite",
   "cmd_invite_desc": "Show Bot's invite link.\nUsage:\n> ``<[0]>invite``\nSame featured command:\n> ``<[0]>초대``",
   "cmd_support": "📧 Support server",
@@ -56,6 +72,8 @@
   "cmd_ping_desc": "Show Bot's ping.\nUsage:\n> ``<[0]>ping``\nSame featured command:\n> ``<[0]>핑``, ``<[0]>퐁``, ``<[0]>pong``",
   "cmd_status": "🎛️ Status",
   "cmd_status_desc": "Show Bot's status.\nUsage:\n> ``<[0]>status``\nSame featured command:\n> ``<[0]>상태``",
+  "cmd_github": "<:github:717700396642074714> GitHub Info",
+  "cmd_github_desc": "Show Bot's GitHub status.\nUsage:\n> ``<[0]>github``\nSame featured command:\n> ``<[0]>깃헙``, ``<[0]>깃허브``, ``<[0]>repo``",
   "cmd_help": "📖 Help / Manual",
   "cmd_help_desc": "Show Bot's help message. (Like this message that you are reading!)\nUsage:\n> ``<[0]>help (command)``\nSame featured command:\n> ``<[0]>도움``, ``<[0]>도움말``, ``<[0]>manual``",
   "cmd_lang": "🌐 Language",
