--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -8,7 +8,7 @@
   "howtochangelang": "언어를 어떻게 바꿔요?",
   "howtochangelang_solution": "당신은 언어를 ``<[0]>lang {language_code_here}``을(를) 입력해서 바꿀 수 있어요.\n예시 : ``<[0]>lang ko``",
   "reboot": "재시작",
-  "reboot_desc": "재시작중...",
+  "reboot_desc": "<[0]>개의 샤드에 재시작 요청을 전송하였습니다.",
   "category": "카테고리",
   "category_general": "일반",
   "category_moderation": "관리",
@@ -48,6 +48,23 @@
   "compile_output_error": ":outbox_tray: 오류!",
   "compile_compiling": "코드 컴파일중...",
   "compile_err": "오류!",
+
+  "status_bot_id": "봇 ID",
+  "status_bot_ram_usage": "RAM 사용량",
+  "status_bot_uptime": "봇 업타임",
+  "status_bot_servers_of_this_shard": "이 샤드의 서버 수",
+  "status_bot_users_of_this_shard": "이 샤드의 유저 수",
+  "status_bot_servers_of_all_shard": "모든 샤드의 서버 수",
+  "status_bot_users_of_all_shard": "모든 샤드의 유저 수",
+  "status_bot_nodejs_ver": "Node.js 버전",
+  "status_bot_discordjs_ver": "Discord.js 버전",
+  "status_bot_os_info": "OS 정보",
+
+  "day": "일",
+  "hour": "시간",
+  "minute": "분",
+  "second": "초",
+
   "cmd_invite": "📧 초대",
   "cmd_invite_desc": "봇의 초대링크를 보여줍니다.\n사용방법:\n> ``<[0]>invite``\n같은 명령어:\n> ``<[0]>초대``",
   "cmd_support": "📧 서포트 서버",
@@ -56,6 +73,8 @@
   "cmd_ping_desc": "봇의 핑을 보여줍니다.\n사용방법:\n> ``<[0]>ping``\n같은 명령어:\n> ``<[0]>핑``, ``<[0]>퐁``, ``<[0]>pong``",
   "cmd_status": "🎛️ 상태",
   "cmd_status_desc": "봇의 상태를 보여줍니다.\n사용방법:\n> ``<[0]>status``\n같은 명령어:\n> ``<[0]>상태``",
+  "cmd_github": "<:github:717700396642074714> GitHub 정보",
+  "cmd_github_desc": "봇의 GitHub 상태를 보여줍니다.\n사용방법:\n> ``<[0]>github``\n같은 명령어:\n> ``<[0]>깃헙``, ``<[0]>깃허브``, ``<[0]>repo``",
   "cmd_help": "📖 도움말 / 메뉴얼",
   "cmd_help_desc": "봇의 도움말을 보여줍니다.\n사용방법:\n> ``<[0]>help (명령어)``\n같은 명령어:\n> ``<[0]>도움``, ``<[0]>도움말``, ``<[0]>manual``",
   "cmd_lang": "🌐 언어",
