--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -66,7 +66,7 @@
   "second": "초",
 
   "github_last_commit_info": "마지막 커밋 정보",
-  "github_last_commit_info_desc": "**[``<[0]>``](<[1]>)** <[2]> - <[3]>\n**<[4]>**이(가) **<[5]>** 브랜치에 작성함.",
+  "github_last_commit_info_desc": "**[``<[0]>``](<[1]>)** <[2]> - <[3]>\n**[<[4]>](<[5]>)**이(가) **[<[6]>](<[7]>)** 브랜치에 커밋함.",
 
   "cmd_invite": "📧 초대",
   "cmd_invite_desc": "봇의 초대링크를 보여줍니다.\n사용방법:\n> ``<[0]>invite``\n같은 명령어:\n> ``<[0]>초대``",
