--- a/i18n/en.json
+++ b/i18n/en.json
@@ -65,7 +65,7 @@
   "second": " second",
 
   "github_last_commit_info": "Last Commit Info",
-  "github_last_commit_info_desc": "**[``<[0]>``](<[1]>)** <[2]> - <[3]>\nby **<[4]>** on **<[5]>** Branch",
+  "github_last_commit_info_desc": "**[``<[0]>``](<[1]>)** <[2]> - <[3]>\nby **[<[4]>](<[5]>)** on **[<[6]>](<[7]>)** Branch",
 
   "cmd_invite": "📧 Invite",
   "cmd_invite_desc": "Show Bot's invite link.\nUsage:\n> ``<[0]>invite``\nSame featured command:\n> ``<[0]>초대``",
