--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -68,6 +68,12 @@
   "github_last_commit_info": "마지막 커밋 정보",
   "github_last_commit_info_desc": "**[``<[0]>``](<[1]>)** <[2]> - <[3]>\n**[<[4]>](<[5]>)**이(가) **[<[6]>](<[7]>)** 브랜치에 커밋함.",
 
+  "kick_success": "✅ 성공적으로 <[0]> 님을 추방했습니다.",
+  "kick_fail": "❌ <[0]> 님을 추방하는데 실패했습니다. 제 역할의 권한을 검토한 후 다시 시도해주세요.",
+
+  "ban_success": "✅ 성공적으로 <[0]> 님을 차단했습니다.",
+  "ban_fail": "❌ <[0]> 님을 차단하는데 실패했습니다. 제 역할의 권한을 검토한 후 다시 시도해주세요.",
+
   "cmd_invite": "📧 초대",
   "cmd_invite_desc": "봇의 초대링크를 보여줍니다.\n사용방법:\n> ``<[0]>invite``\n같은 명령어:\n> ``<[0]>초대``",
   "cmd_support": "📧 서포트 서버",
