--- a/src/i18n/ko.json
+++ b/src/i18n/ko.json
@@ -65,6 +65,8 @@
   "minute": "분",
   "second": "초",
 
+  "guild_only_cmd": "❌ 이 명령어는 서버에서만 사용할 수 있습니다.",
+
   "github_last_commit_info": "마지막 커밋 정보",
   "github_last_commit_info_desc": "**[``<[0]>``](<[1]>)** <[2]> - <[3]>\n**[<[4]>](<[5]>)**이(가) **[<[6]>](<[7]>)** 브랜치에 커밋함.",
 
@@ -73,6 +75,15 @@
 
   "ban_success": "✅ 성공적으로 <[0]> 님을 차단했습니다.",
   "ban_fail": "❌ <[0]> 님을 차단하는데 실패했습니다. 제 역할의 권한을 검토한 후 다시 시도해주세요.",
+
+  "fail_permission": "❌ 작업을 수행하기 위한 당신의 권한이 부족합니다. 필요한 권한: **`<[0]>`**",
+  "fail_notarget": "❌ 선택된 멤버가 없어 기각되었습니다.",
+
+  "blacklist_add_success": "Successfully added User **``<[0]>``**.\nReason: <[1]>",
+  "blacklist_remove_success": "Successfully remove User **``<[0]>``**.\nReason: <[1]>",
+  "blacklist_success": "Successfully added User **``<[0]>``**.\nReason: <[1]>",
+
+  "no_task": "작업이 지정되지 않았습니다. 작업을 지정해주세요.",
 
   "cmd_invite": "📧 초대",
   "cmd_invite_desc": "봇의 초대링크를 보여줍니다.\n사용방법:\n> ``<[0]>invite``\n같은 명령어:\n> ``<[0]>초대``",
@@ -88,6 +99,14 @@
   "cmd_help_desc": "봇의 도움말을 보여줍니다.\n사용방법:\n> ``<[0]>help (명령어)``\n같은 명령어:\n> ``<[0]>도움``, ``<[0]>도움말``, ``<[0]>manual``",
   "cmd_lang": "🌐 언어",
   "cmd_lang_desc": "당신의 대한 봇의 반응 언어를 변경합니다.\n사용방법:\n> ``<[0]>lang <언어코드>``\n같은 명령어:\n> ``<[0]>lang``, ``<[0]>language``",
+  "cmd_sayd": "🐦 메세지 따라하기",
+  "cmd_sayd_desc": "당신의 메세지를 앵무새처럼 따라합니다!\n사용방법:\n> ``<[0]>sayd <할 말>``\n같은 명령어:\n> ``<[0]>따라해``",
+
+  "cmd_kick": "🦶 킥",
+  "cmd_kick_desc": "선택한 유저를 서버에서 추방합니다.\n사용방법:\n> ``<[0]>kick <@멘션>``\n같은 명령어:\n> ``<[0]>킥``",
+  "cmd_ban": "🔨 밴",
+  "cmd_ban_desc": "선택한 유저를 서버에서 차단합니다.\n사용방법:\n> ``<[0]>ban <@멘션>``\n같은 명령어:\n> ``<[0]>밴``",
+
   "cmd_reboot": "🔄 재시동",
   "cmd_reboot_desc": "모든 샤드의 봇을 재시동 합니다.\n사용방법:\n> ``<[0]>reboot``\n같은 명령어:\n> ``<[0]>재시동``, ``<[0]>재시작``, ``<[0]>restart``",
   "cmd_shell": "🛠️ 쉘",
@@ -98,6 +117,6 @@
   "cmd_sql_desc": "봇 서버에 원격으로 SQL 컴파일을 요청합니다.\n사용방법:\n> ``<[0]>sql <컴파일할 코드>``\n같은 명령어:\n> ``<[0]>db``",
   "cmd_notice": "📣 공지",
   "cmd_notice_desc": "봇이 있는 모든 서버에 공지 메세지를 전송합니다.\n사용방법:\n> ``<[0]>notice <할 말>``\n같은 명령어:\n> ``<[0]>공지``",
-  "cmd_sayd": "🐦 메세지 따라하기",
-  "cmd_sayd_desc": "당신의 메세지를 앵무새처럼 따라합니다!\n사용방법:\n> ``<[0]>sayd <할 말>``\n같은 명령어:\n> ``<[0]>따라해``"
+  "cmd_blacklist": "📝 블랙리스트",
+  "cmd_blacklist_desc": "F를 눌러 조의를 표하십시오. 블랙리스트에 있는 유저는 봇의 명령어를 사용하지 못합니다.\n사용방법:\n> ``<[0]>blacklist <add | remove | list> <@멘션> [사유]``\n같은 명령어:\n> ``<[0]>ignore``"
 }
