--- a/src/i18n/ko.json
+++ b/src/i18n/ko.json
@@ -68,7 +68,7 @@
   "guild_only_cmd": "❌ 이 명령어는 서버에서만 사용할 수 있습니다.",
 
   "github_last_commit_info": "마지막 커밋 정보",
-  "github_last_commit_info_desc": "**[``<[0]>``](<[1]>)** <[2]> - <[3]>\n**[<[4]>](<[5]>)**이(가) **[<[6]>](<[7]>)** 브랜치에 커밋함.",
+  "github_last_commit_info_desc": "**[``<[0]>``](<[1]>)** <[2]>\n**[<[3]>](<[4]>)**이(가) **[<[5]>](<[6]>)** 브랜치에 커밋함.",
 
   "kick_success": "✅ 성공적으로 <[0]> 님을 추방했습니다.",
   "kick_fail": "❌ <[0]> 님을 추방하는데 실패했습니다. 제 역할의 권한을 검토한 후 다시 시도해주세요.",
