--- a/src/i18n/ko.json
+++ b/src/i18n/ko.json
@@ -106,6 +106,8 @@
   "cmd_kick_desc": "선택한 유저를 서버에서 추방합니다.\n사용방법:\n> ``<[0]>kick <@멘션>``\n같은 명령어:\n> ``<[0]>킥``",
   "cmd_ban": "🔨 밴",
   "cmd_ban_desc": "선택한 유저를 서버에서 차단합니다.\n사용방법:\n> ``<[0]>ban <@멘션>``\n같은 명령어:\n> ``<[0]>밴``",
+  "cmd_warn": "🛠️ 경고",
+  "cmd_warn_desc": "선택한 유저의 경고를 관리합니다.\n사용방법:\n> ``<[0]>warn <@멘션>``\n같은 명령어:\n> ``<[0]>경고``",
 
   "cmd_reboot": "🔄 재시동",
   "cmd_reboot_desc": "모든 샤드의 봇을 재시동 합니다.\n사용방법:\n> ``<[0]>reboot``\n같은 명령어:\n> ``<[0]>재시동``, ``<[0]>재시작``, ``<[0]>restart``",
